# dotenv

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  dotenv-config.cmake.in  dotenv.c  dotenv.h  test.valid.env  test_dotenv.c
.github/workflows/: test.yml
assets/: .env
include/dotenv/: dotenv.h
src/: dotenv.c
test/: CMakeLists.txt  dotenv.c
test/assets/: test.valid.env
